--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <h1></h1>
+    <div class="instructions">Please go to console to begin game</div>
     <div class="bodyContainer">
 
         <div class="mainCharacterView left">
